Switch breakpoint to prevent header overflow

--- a/src/components/TopBar.module.scss
+++ b/src/components/TopBar.module.scss
@@ -83,7 +83,7 @@
   }
 }
 
-@media (min-width: 48rem) {
+@media (min-width: 54rem) {
   .topBar {
     gap: 0 2em;
   }
